--- a/app/components/editor.hbs
+++ b/app/components/editor.hbs
@@ -3,7 +3,7 @@
     @level="4"
     @skin="4"
   >
-    endpoint: <input type='text' value={{endpoint}} {{on 'change' @setEndpoint}} />
+    endpoint: <input class="editor-input" type="text" value={{endpoint}} {{on 'change' @setEndpoint}} />
   </AuHeading>
   <YasguiIntegration as |Yasgui|>
     <Yasgui.editor @endpoint={{@endpoint}} />
