--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -113,3 +113,19 @@
 .body {
   padding: 20px 40px 0;
 }
+
+.editor-container {
+  margin-top: 10px;
+
+  .editor-input {
+    border: 0.1rem solid #ccd1d9;
+    border-radius: 0.3rem;
+    color: #000;
+    font-size: 1.6rem;
+    font-weight: 400;
+    padding: 0 1.2rem 0.1ex;
+    min-width: 60%;
+    height: 3.6rem;
+    margin-bottom: 10px;
+  }
+}
