sidebar and main. basic styling

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,5 @@
-{{page-title "Sparqling"}}
+{{page-title "SPARQLing"}}
 
-<div class="container">
-  <Header />
-  <div class="body">
-    <AuHeading>SPARQLing in Ember</AuHeading>
-    {{outlet}}
-  </div>
-</div>
+<AuApp>
+  {{outlet}}
+</AuApp>
