--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -100,21 +100,11 @@
 @import 'appuniversum/u-visible';
 @import 'appuniversum/u-widths';
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  background-color: rgb(250, 250, 251);
-  min-height: 100vh;
-}
-
 .body {
-  padding: 20px 40px 0;
+  padding: 4.8rem 9.6rem;
 }
 
-.editor-container {
+/* .editor-container {
   margin-top: 10px;
 
   .editor-input {
@@ -128,4 +118,4 @@
     height: 3.6rem;
     margin-bottom: 10px;
   }
-}
+} */
