code snippets working. changed file structure

--- a/app/components/main/sidebar.hbs
+++ b/app/components/main/sidebar.hbs
@@ -7,7 +7,7 @@
           <ul class="au-c-list-navigation">
             <li class="au-c-list-navigation__item">
               <AuNavigationLink>
-                <LinkTo @route="references">References</LinkTo>
+                <LinkTo @route="types">Query Types</LinkTo>
               </AuNavigationLink>
             </li>
           </ul>
