--- a/app/components/editor.hbs
+++ b/app/components/editor.hbs
@@ -10,7 +10,7 @@
       value={{@endpoint}}
       {{on 'change' @setEndpoint}} 
     />
-  </AuHeading>
+  </AuHeading><br>
   <YasguiIntegration as |Yasgui|>
     <Yasgui.editor @endpoint={{@endpoint}} />
     <Yasgui.results />
