--- a/app/components/main/sidebar.hbs
+++ b/app/components/main/sidebar.hbs
@@ -10,6 +10,11 @@
                 <LinkTo @route="types">Query Types</LinkTo>
               </AuNavigationLink>
             </li>
+            <li class="au-c-list-navigation__item">
+              <AuNavigationLink>
+                <LinkTo @route="playground">Playground</LinkTo>
+              </AuNavigationLink>
+            </li>
           </ul>
         </li>
       </ul>
