added exercises route and some styling

--- a/app/components/main.hbs
+++ b/app/components/main.hbs
@@ -5,9 +5,9 @@
   </m.sidebar>
   <m.content @scroll={{true}}>
     <div class="body">
-      <AuHeading>
+      <AuHeading class="title">
         {{@title}}
-        <hr />
+        <AuHr />
       </AuHeading>
       {{yield}}
     </div>
