--- a/app/components/main/sidebar.hbs
+++ b/app/components/main/sidebar.hbs
@@ -17,6 +17,16 @@
             </li>
           </ul>
         </li>
+        <li class="au-c-list-navigation__item au-c-list-navigation__item--section">
+          <h2 class="au-c-list-navigation__section-title">Hands-on</h2>
+          <ul class="au-c-list-navigation">
+            <li class="au-c-list-navigation__item">
+              <AuNavigationLink>
+                <LinkTo @route="hands-on.exercises">Exercises</LinkTo>
+              </AuNavigationLink>
+            </li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </div>
