--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -104,6 +104,17 @@
   padding: 4.8rem 9.6rem;
 }
 
+.title,
+.query-types {
+  margin-bottom: 40px;
+}
+
+.query-types a:link,
+.query-types a:visited {
+  text-decoration: none !important;
+  color: black;
+}
+
 /* .editor-container {
   margin-top: 10px;
 
