added exercise part 1 route/component

--- a/app/components/main/sidebar.hbs
+++ b/app/components/main/sidebar.hbs
@@ -22,7 +22,7 @@
           <ul class="au-c-list-navigation">
             <li class="au-c-list-navigation__item">
               <AuNavigationLink>
-                <LinkTo @route="hands-on.exercises">Exercises</LinkTo>
+                <LinkTo @route="hands-on.part1">Exercise Part 1</LinkTo>
               </AuNavigationLink>
             </li>
           </ul>
