--- a/app/components/exercise-one.hbs
+++ b/app/components/exercise-one.hbs
@@ -1,3 +1,11 @@
-<div>
-  <AuHeading @level="4" @skin="4">1. How do you check what types are defined in your endpoint?</AuHeading>
+<div class="part1-container">
+  <div class="part1-exercise">
+    <AuHeading @level="4" @skin="4">1. How do you check what types are defined in your endpoint?</AuHeading>
+    <AuHelpText>Make sure to use DISTINCT and LIMIT the search results to prevent breaking the editor!</AuHelpText><br>
+    <Editor />
+  </div>
+
+  <div class="part1-hints">
+    <AuButton>Hint 1</AuButton>
+  </div>
 </div>
