--- a/app/templates/playground.hbs
+++ b/app/templates/playground.hbs
@@ -1,7 +1,4 @@
 {{page-title "Playground"}}
 <Main @title="Playground">
-  <Editor 
-    @endpoint={{this.endpoint}}
-    @setEndpoint={{this.setEndpoint}}
-  />
+  <Editor />
 </Main>
