modal not showing, input bug generates new editor

--- a/app/components/exercise-one.hbs
+++ b/app/components/exercise-one.hbs
@@ -6,6 +6,8 @@
   </div>
 
   <div class="part1-hints">
-    <AuButton>Hint 1</AuButton>
+    <Exercise::Hint @title="Hint"  @modalTitle="Hint">
+      You can use <AuPill>rdf:type</AuPill> to call out the types.
+    </Exercise::Hint>
   </div>
 </div>
