typo in helptext removed

--- a/app/components/exercise-one.hbs
+++ b/app/components/exercise-one.hbs
@@ -1,7 +1,9 @@
 <div class="part1-container">
   <div class="part1-exercise">
     <AuHeading @level="4" @skin="4">1. How do you check what types are defined in your endpoint?</AuHeading>
-    <AuHelpText>Make sure to use DISTINCT and LIMIT the search results to prevent breaking the editor!</AuHelpText><br>
+    <AuHelpText>
+      Make sure to use <AuPill>DISTINCT</AuPill> and <AuPill>LIMIT</AuPill> to prevent the editor from breaking!
+    </AuHelpText><br>
     <Editor />
   </div>
 
