structure revision. added routes per exercise

--- a/app/components/editor.hbs
+++ b/app/components/editor.hbs
@@ -1,6 +1,6 @@
 <div class="editor-container">
   <AuHeading @level="4" @skin="4">
-    endpoint: 
+    Endpoint: 
     <input 
       class="editor-input" 
       type="text"
